# orb-discovery

./: .gitignore  README.md
.github/: CODEOWNERS  golangci.yaml  pull_request_labeler.yaml
.github/workflows/: device-discovery-lint-tests.yaml  device-discovery-release.yaml  network-discovery-lint.yaml  network-discovery-release.yaml  network-discovery-tests.yaml  orb-discovery-lint-tests.yaml  worker-lint-tests.yaml  worker-release.yaml
device-discovery/: README.md  pyproject.toml
device-discovery/device_discovery/: main.py  parser.py  server.py
device-discovery/device_discovery/policy/: models.py  runner.py
device-discovery/docker/: Dockerfile
device-discovery/tests/: test_discovery.py  test_main.py  test_parser.py  test_server.py
network-discovery/: Makefile  README.md  go.mod  go.sum
network-discovery/cmd/: main.go
network-discovery/config/: config.go  logger.go  logger_test.go  utils.go  utils_test.go
network-discovery/docker/: Dockerfile
network-discovery/policy/: manager.go  manager_test.go  runner.go  runner_test.go
network-discovery/server/: server.go  server_test.go
network-discovery/version/: version.go  version_test.go
orb-discovery/: pyproject.toml
orb-discovery/docker/: Dockerfile
orb-discovery/orb_discovery/: client.py  main.py  parser.py  server.py
orb-discovery/orb_discovery/cli/: cli.py
orb-discovery/orb_discovery/policy/: manager.py  models.py  runner.py
orb-discovery/tests/: test_cli.py  test_client.py  test_discovery.py  test_main.py  test_parser.py  test_server.py  test_translate.py
orb-discovery/tests/policy/: test_manager.py  test_runner.py
worker/: README.md  pyproject.toml
worker/docker/: Dockerfile
worker/tests/: __init__.py  test_backend.py
worker/tests/mock_custom/: README.md  (+1 more)
worker/worker/: backend.py  models.py  version.py
(+13 files in other folders)
